documentation added, methods for rules refactoring & packages update

--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -10,7 +10,7 @@
                     <p class="title is-2 is-hidden-touch">PLEXAR</p>
 
                     <p class="subtitle">La plateforme participative de référencement de produits à impact social</p>
-                    
+
                     <form id="searchForm">
                         <div class="field has-addons" style="justify-content: center;">
                             <div class="control" style="width: 25em; max-width: 100%;">
@@ -32,7 +32,7 @@
     <hr style="margin: 0;">
 
     <section>
-
+        <!-- How it works section with steps hidden on mobile -->
         <div class="hero is-hidden-mobile">
             <div class="hero-body">
                 <div class="container has-text-centered">
@@ -73,8 +73,8 @@
             </div>
         </div>
 
+        <!-- How it works section displayed on mobile with different icons and without steps -->
         <div class="is-hidden-tablet">
-
             <h3 class="title is-3 has-text-centered">Comment ça fonctionne ?</h3>
 
             <div class="columns">
@@ -133,7 +133,6 @@
                     <p>Découvrez nos <span class="has-text-primary is-family-code" style="font-size: 2.5rem;">{{productsCounter}}</span> produits à impact social !</p>
                 </div>
             </div>
-
         </div>
 
     </section>
