points update bug resolved & style update

--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -37,6 +37,7 @@
                     </figure>
                     <p class="title">Henri</p>
                     <p class="subtitle">Graphiste & Webdesigner</p>
+                    <p class="subtitle is-italic"><span class="is-size-3">«</span> Eat at least five portions of fruit and plexar daily. <span class="is-size-3">»</span></p>
                 </div>
             </div>
         </div>
