--- a/imports/UI/messages/verifyEmail.html
+++ b/imports/UI/messages/verifyEmail.html
@@ -7,7 +7,7 @@
             </div>
             <div class="message-body" style="color: initial;">
                 <p>
-                    <span>Vous n'avez rien reçu ? Consultez vos spam / indésirables et si vous n'avez toujours rien nous pouvons</span>
+                    <span>Vous n'avez rien reçu ? Patientez quelques minutes, consultez vos spam / indésirables et si vous n'avez toujours rien nous pouvons</span>
                     <a id="resendVerificationEmail">renvoyer l'email</a>
                 </p>
             </div>
