police for subtitles added & other style updates

--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -1,4 +1,11 @@
 <template name="about">
+
+    <article class="message is-warning" style="margin-bottom: 0;">
+        <div class="message-header">
+            <p style="margin: 0 auto;">Cette page est en cours de création, elle sera enrichie dans les jours/semaines à venir.</p>
+        </div>
+    </article>
+
     <br>
     <h2 class="title is-3 has-text-centered">Notre équipe</h2>
     <br>
