--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -37,7 +37,7 @@
             <div class="hero-body">
                 <div class="container has-text-centered">
 
-                    <h3 class="title is-3 has-text-centered">Comment ça fonctionne ?</h3>
+                    <h3 class="title is-3 has-text-centered is-family-monospace">Comment ça fonctionne ?</h3>
 
                     <ul class="steps">
 
@@ -75,7 +75,7 @@
 
         <!-- How it works section displayed on mobile with different icons and without steps -->
         <div class="is-hidden-tablet">
-            <h3 class="title is-3 has-text-centered">Comment ça fonctionne ?</h3>
+            <h3 class="title is-3 has-text-centered is-family-monospace" style="margin-top: 0.5rem;">Comment ça fonctionne ?</h3>
 
             <div class="columns">
                 <hr style="margin: 0;">
@@ -142,7 +142,7 @@
     <section>
         <div class="hero">
             <div class="hero-body">
-                <h3 class="title is-3 has-text-centered">Les plus populaires</h3>
+                <h2 class="title is-2 has-text-centered is-family-monospace">Les plus populaires</h2>
 
                 {{#each displayBestProducts}}
                     {{> productBanner}}
