--- a/imports/UI/faq.html
+++ b/imports/UI/faq.html
@@ -1,4 +1,11 @@
 <template name="faq">
+
+    <article class="message is-warning" style="margin-bottom: 0;">
+        <div class="message-header">
+            <p style="margin: 0 auto;">Cette page est en cours de création, elle sera enrichie dans les jours/semaines à venir.</p>
+        </div>
+    </article>
+
     <h3 class="title is-3 has-text-centered">Foire aux questions</h3>
 
     <div id="collapsibleAnswers">
@@ -15,7 +22,7 @@
                     Après avoir observé les détails du produit, vous pouvez approuver ou rejeter l'action et suite à plusieurs participations notre système appliquera la décision de la majorité des votants.
                     </span>
                     <br>
-                    <span>Cependant lorsque nous constatons un afflux massif d'éléments en modération, il est possible que nous intervenions en appliquant instantanément une décision pour éviter que les contributeurs n'ai à subir
+                    <span>Cependant lorsque nous constatons un afflux massif d'éléments en modération, il est possible que nous intervenions en appliquant instantanément une décision pour éviter que les contributeurs n'aient à subir
                     un délai de validation trop important.</span>
                 </div>
             </div>
