--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -126,11 +126,15 @@
             <div class="hero-body">
                 <div class="has-text-centered">
                     <p>
-                        Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des produits mais également d’en proposer.
-                        Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
+                        Sur Plexar, vous pouvez trouver des produits respectueux de l'environnement et engagés pour sa protection, militant pour l’équité sociale et économique, basés sur l'économie circulaire ou,
+                        de manière générale, impactant positivement la société : des produits à impact social.
                     </p>
+
+                    <p>L'objectif ? Vous aider à adopter une consommation plus responsable et donner de la visibilité à ces produits innovants mais souvent méconnus.</p>
+
                     <br>
-                    <p>Découvrez nos <span class="has-text-primary is-family-code" style="font-size: 2.5rem;">{{productsCounter}}</span> produits à impact social !</p>
+
+                    <p>Découvrez dès maintenant nos <span class="has-text-primary is-family-code" style="font-size: 2.5rem;">{{productsCounter}}</span> produits à impact social !</p>
                 </div>
             </div>
         </div>
