--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -126,8 +126,8 @@
             <div class="hero-body">
                 <div class="has-text-centered">
                     <p>
-                        Sur Plexar, vous pouvez trouver des produits respectueux de l'environnement et engagés pour sa protection, militant pour l’équité sociale et économique, basés sur l'économie circulaire ou,
-                        de manière générale, impactant positivement la société : des produits à impact social.
+                        Sur Plexar, vous pouvez trouver des produits respectueux de l'environnement et engagés pour sa protection, militants pour l’équité sociale et économique, basés sur l'économie circulaire ou,
+                        de manière générale, impactants positivement la société : des produits à impact social.
                     </p>
 
                     <p>L'objectif ? Vous aider à adopter une consommation plus responsable et donner de la visibilité à ces produits innovants mais souvent méconnus.</p>
