spelling errors, first product image error in console fixed, youtube added in social media section

--- a/imports/UI/body.html
+++ b/imports/UI/body.html
@@ -158,6 +158,10 @@
                 <a class="icon is-medium" href="https://twitter.com/PlexarApp" title="Plexar sur Twitter" target="_blank">
                     <img src="twitter.svg" alt="Twitter">
                 </a>
+
+                <a class="icon is-medium" href="https://www.youtube.com/channel/UCVwdd6t8Y5IkRj2PY2CNr0A" title="Plexar sur YouTube" target="_blank">
+                    <img src="youtube.svg" alt="YouTube">
+                </a>
             </div>
 
             <div class="column" style="background-color: #f3f3f3;">
