FlowRouter added with URL system (bêta)

--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -1,11 +1,4 @@
 <template name="about">
-
-    <article class="message is-warning" style="margin-bottom: 0;">
-        <div class="message-header">
-            <p style="margin: 0 auto;">Cette page est en cours de création, elle sera enrichie dans les jours/semaines à venir.</p>
-        </div>
-    </article>
-
     <br>
     <h2 class="title is-3 has-text-centered">Notre équipe</h2>
     <br>
@@ -14,7 +7,7 @@
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
-                        <img class="is-rounded" src="Evan.jpeg">
+                        <img class="is-rounded" src="/Evan.jpeg">
                     </figure>
                     <p class="title">Evan</p>
                     <p class="subtitle">Webmarketing & Communication</p>
@@ -27,7 +20,7 @@
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
-                        <img class="is-rounded" src="Reza.png">
+                        <img class="is-rounded" src="/Reza.png">
                     </figure>
                     <p class="title">Reza</p>
                     <p class="subtitle">Développeur & Webmaster</p>
@@ -40,7 +33,7 @@
             <div class="card">
                 <div class="card-content">
                     <figure class="image is-128x128" style="margin: 0 auto;">
-                        <img class="is-rounded" src="Henri.png">
+                        <img class="is-rounded" src="/Henri.png">
                     </figure>
                     <p class="title">Henri</p>
                     <p class="subtitle">Graphiste & Webdesigner</p>
