--- a/imports/UI/search.html
+++ b/imports/UI/search.html
@@ -1,4 +1,4 @@
-<template name="searchResults">
+<template name="search">
     <br>
     <form id="searchForm">
         <div class="columns is-mobile">
