--- a/imports/UI/user/userProfile.html
+++ b/imports/UI/user/userProfile.html
@@ -4,21 +4,21 @@
         <div class="tabs is-boxed is-fullwidth is-toggle is-hidden-mobile">
             <ul>
                 <li id="favorite">
-                    <a>
+                    <a href="/user/favorite">
                         <span class="icon"><i class="fas fa-bookmark"></i></span>
                         <span>Mes favoris</span>
                     </a>
                 </li>
 
                 <li id="contributions">
-                    <a>
+                    <a href="/user/contributions">
                         <span class="icon"><i class="fas fa-list"></i></span>
                         <span>Mes contributions</span>
                     </a>
                 </li>
 
                 <li id="informations">
-                    <a>
+                    <a href="/user/informations">
                         <span class="icon"><i class="fas fa-user"></i></span>
                         <span>Mes informations</span>
                     </a>
