--- a/imports/UI/faq.html
+++ b/imports/UI/faq.html
@@ -1,11 +1,4 @@
 <template name="faq">
-
-    <article class="message is-warning" style="margin-bottom: 0;">
-        <div class="message-header">
-            <p style="margin: 0 auto;">Cette page est en cours de création, elle sera enrichie dans les jours/semaines à venir.</p>
-        </div>
-    </article>
-
     <h3 class="title is-3 has-text-centered">Foire aux questions</h3>
 
     <div id="collapsibleAnswers">
@@ -38,7 +31,7 @@
                 <div class="message-body-content">
                     <span>Plexar vous permet de rechercher des alternatives pour adopter une consommation plus responsable, mais si vous le souhaitez vous pouvez également contribuer à améliorer notre plateforme par diverses actions (ajout, modification, vote...).</span>
                     <span>Chacune de ces actions vous rapporte des points qui permettent de mesurer votre implication, notamment via la</span>
-                    <a class="link" id="bestContributors">liste des meilleurs contributeurs.</a>
+                    <a class="link" href="/bestContributors">liste des meilleurs contributeurs.</a>
                     <span>Ces points vous permettent également de monter en niveau et de déploquer des avantages (actions mineures validées instantanément, augmentation du poids des votes et bien plus à venir prochainement.)</span>
                 </div>
             </div>
