--- a/imports/UI/home.html
+++ b/imports/UI/home.html
@@ -1,6 +1,6 @@
 <template name="home">
     <div style="background: #f0f0f0">
-        <section class="hero is-medium" style="background: url('homeBanner.png') no-repeat center;">
+        <section class="hero is-medium" style="background: url('/homeBanner.png') no-repeat center;">
             <div class="hero-body">
                 <div class="container has-text-centered">
 
@@ -84,7 +84,7 @@
                     <h4 class="title is-4" style="margin-bottom: 1rem;">Ajouter</h4>
 
                     <figure class="image is-90x90" style="margin: 0 auto;">
-                        <img src="ajouter.png" alt="Ajouter">
+                        <img src="/ajouter.png" alt="Ajouter">
                     </figure>
 
                     <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ses bons plans avec la communauté</p>
@@ -96,7 +96,7 @@
                     <h4 class="title is-4" style="margin-bottom: 0;">Voter</h4>
 
                     <figure class="image is-90x90" style="margin: 0 auto;">
-                        <img src="voter.png" alt="Voter">
+                        <img src="/voter.png" alt="Voter">
                     </figure>
 
                     <p>Participez à la modération collective et votez pour vos produits favoris pour leur donner de la visibilité</p>
@@ -108,7 +108,7 @@
                     <h4 class="title is-4" style="margin-bottom: 0.5rem;">Rechercher</h4>
 
                     <figure class="image is-90x90" style="margin: 0 auto;">
-                        <img src="rechercher.png" alt="Rechercher">
+                        <img src="/rechercher.png" alt="Rechercher">
                     </figure>
 
                     <p>Trouvez des alternatives pour consommer en ayant un impact positif sur la société</p>
