FlowRouter added for modals & DRY refactoring

--- a/imports/UI/editProduct.html
+++ b/imports/UI/editProduct.html
@@ -130,11 +130,6 @@
             <button class="button is-success is-medium is-fullwidth" id="submitModifications" type="submit">Valider les modifications</button>
         </form>
     {{else}}
-        <p class="subtitle">
-            <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
-            <span>ou</span>
-            <span class="login link has-text-weight-semibold">connectez-vous</span>
-            <span>pour continuer.</span>
-        </p>
+        {{> loginRequired}}
     {{/if}}
 </template>
