--- a/imports/UI/main.html
+++ b/imports/UI/main.html
@@ -117,10 +117,10 @@
                                 {{else}}
                                     <!-- Displayed when the user is NOT logged in-->
                                     <div class="buttons">
-                                        <a class="button is-primary register">
+                                        <a href="/register" class="button is-primary">
                                             <strong>S'inscrire</strong>
                                         </a>
-                                        <a class="button login is-light">Se connecter</a>
+                                        <a class="button is-light" href="/login">Se connecter</a>
                                     </div>
                                 {{/if}}
                         </div>
@@ -143,12 +143,12 @@
             <div class="column" style="background-color: #f3f3f3;">
                 <ul>
                     <li class="link width-fit-content">
-                        <a href="/about" class="link" style="color: inherit;">
+                        <a href="/about" class="link">
                             A propos de Plexar
                         </a>
                     </li>
                     <li class="link width-fit-content">
-                        <a href="/faq" class="link" style="color: inherit;">
+                        <a href="/faq" class="link">
                             Foire aux questions
                         </a>
                     </li>
@@ -174,12 +174,12 @@
             <div class="column" style="background-color: #f3f3f3;">
                 <ul>
                     <li class="link width-fit-content" >
-                        <a href="/contact" class="link" style="color: inherit;">
+                        <a href="/contact" class="link">
                             Nous contacter
                         </a>
                     </li>
                     <li class="link width-fit-content">
-                        <a href="/bestContributors" class="link" style="color: inherit;">
+                        <a href="/bestContributors" class="link">
                             Meilleurs contributeurs
                         </a>
                     </li>
