--- a/imports/UI/modals/login.html
+++ b/imports/UI/modals/login.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <br>
-                    <p class="link has-text-weight-semibold width-fit-content" id="forgotPassword">Mot de passe oublié</p>
+                    <a href="/forgotPassword" class="link has-text-weight-semibold width-fit-content">Mot de passe oublié</a>
                 </form>
 
                 <br>
@@ -49,7 +49,7 @@
                 <div class="card-footer-item">
                     <p class="subtitle has-text-centered">
                         <span>Pas encore de compte ?</span>
-                        <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
+                        <a href="/register" class="link has-text-weight-semibold">Inscrivez-vous</a>
                         <span>pour continuer</span>
                     </p>
                 </div>
