--- a/imports/UI/modals/resetPassword.html
+++ b/imports/UI/modals/resetPassword.html
@@ -45,7 +45,7 @@
                 <div class="card-footer-item">
                     <p class="subtitle has-text-centered">
                         <span>Pas encore de compte ?</span>
-                        <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
+                        <a href="/register" class="link has-text-weight-semibold">Inscrivez-vous</a>
                         <span>pour continuer</span>
                     </p>
                 </div>
