--- a/imports/UI/moderation/moderationProductPage.html
+++ b/imports/UI/moderation/moderationProductPage.html
@@ -1,5 +1,5 @@
 <template name="moderationProductPage">
-    {{#each displayProduct}}
+    {{#with displayProduct}}
         <div class="card width-fit-content" style="margin: auto;">
             <header class="card-header">
 
@@ -105,5 +105,5 @@
                 </div>
             </div>
         </div>
-    {{/each}}
+    {{/with}}
 </template>
