--- a/imports/UI/user/favorite.html
+++ b/imports/UI/user/favorite.html
@@ -1,14 +1,15 @@
 <template name="favorite">
+    {{#if currentUser}}
+        {{#if noFavorite}}
+            <h5 class="title is-5 has-text-centered">
+                <span>Vous n'avez pas encore enregistré de favoris, vous pouvez utiliser l'icône</span>
+                <span class="icon"><i class="far fa-bookmark"></i></span>
+                <span>située en haut à droite de la page d'un produit pour l'ajouter à vos favoris.</span>
+            </h5>
+        {{/if}}
 
-    {{#if noFavorite}}
-        <h5 class="title is-5 has-text-centered">
-            <span>Vous n'avez pas encore enregistré de favoris, vous pouvez utiliser l'icône</span>
-            <span class="icon"><i class="far fa-bookmark"></i></span>
-            <span>située en haut à droite de la page d'un produit pour l'ajouter à vos favoris.</span>
-        </h5>
+        {{#each displayFavoriteProducts}}
+            {{> productBanner}}
+        {{/each}}
     {{/if}}
-
-    {{#each displayFavoriteProducts}}
-        {{> productBanner}}
-    {{/each}}
 </template>
