Share buttons added in product page & footer

--- a/imports/UI/moderation/moderationProductPage.html
+++ b/imports/UI/moderation/moderationProductPage.html
@@ -102,6 +102,11 @@
                         <span class="icon"><i class="fas fa-edit"></i></span>
                         <p>Proposer des modifications</p>
                     </button>
+
+                    <button class="button" disabled>
+                        <span class="icon"><img src="/share.png"></span>
+                        <span>Partager</span>
+                    </button>
                 </div>
             </div>
         </div>
