--- a/imports/UI/main.html
+++ b/imports/UI/main.html
@@ -7,7 +7,7 @@
                         <img src="/logo.png" style="width: 144px; height: 36px">
                     </a>
 
-                    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="mainNavbar">
+                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainNavbar">
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
